Avoid SEGV even if audio device has no mixer features. Fix PR/47003